--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         function submitForm() {
             slider.value = 10;
             sliderValue.innerText = "10 😍";
-            document.body.innerHTML = "<h2>I miss you this much too! :) ❤️</h2>";
+            document.body.innerHTML = "<h2>Woah... calm down :D OK yes I do miss you this much too! :P ❤️</h2>";
         }
     </script>
 
